# tty-form

./: Cargo.toml  README.md
examples/: basic.rs  helloworld.rs  layout.rs  simple.rs
src/: control.rs  coordinator.rs  dependency.rs  device.rs  element.rs  form.rs  layout.rs  lib.rs  option_control.rs  result.rs  schema.rs  step.rs  style.rs  test.rs  text.rs  utility.rs
src/control/: selectinput.rs  statictext.rs  textinput.rs
src/element/: literal.rs
src/element/input/: text.rs
src/step/: compound.rs  keyvalue.rs  textblock.rs  yesno.rs
