[package]
description = "Provides generic terminal form capabilities."
authors = ["Daniel Way <contact@danieldway.com>"]
name = "tty-form"
version = "1.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/danielway/tty-text"
exclude = [".github"]

[dependencies]
termion = "1.5.6"
unicode-segmentation = "1.9.0"
tty-interface = "3.0.0"
tty-text = "1.0.0"
